@@ -1,5 +1,6 @@
 * Tue Feb 06 2007 Jesse Keating <jkeating@redhat.com>
 - yum bestPackagesFromList takes an arch argument. Fixes ppc64 bug
+- Don't use 'returnSimple' anymore, deprecated in yum api
 
 * Sat Feb 03 2007 Jesse Keating <jkeating@redhat.com>
 - Be able to opt-out of a bugurl since buildinstall supports this
